--- a/src/web/views/index.ejs
+++ b/src/web/views/index.ejs
@@ -1,4 +1,5 @@
-<!-- Example of what to add to head section in EJS templates (e.g., in views/index.ejs, etc.) -->
+<!DOCTYPE html>
+<html lang="pl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +9,8 @@
     <link rel="stylesheet" href="/css/style.css">
     <!-- Add dark mode stylesheet -->
     <link rel="stylesheet" href="/css/dark-mode.css">
-  </head>
+    <script src="/js/saved-style.js"></script>
+</head>
 <body>
 <%- include('partials/navbar') %>
 
@@ -79,5 +81,5 @@
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
         <script src="/js/dark-mode.js"></script>
-        </body>
-        </html>
+</body>
+</html>
